--- a/xz_application/pubspec.yaml
+++ b/xz_application/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
   uses-material-design: true
   assets:
     - images/job.jpg
+    - images/cPic.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
