--- a/xz_application/pubspec.yaml
+++ b/xz_application/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  shelf_proxy: 0.1.0+7
+  dio: ^3.0.3
+  flutter_flipperkit: ^0.0.18
 
 dev_dependencies:
   flutter_test:
