--- a/xz_application/pubspec.yaml
+++ b/xz_application/pubspec.yaml
@@ -45,6 +45,8 @@ flutter:
   assets:
     - images/job.jpg
     - images/cPic.jpg
+    - images/loginBg.jpg
+    - images/insLogo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
