--- a/fu_application/pubspec.yaml
+++ b/fu_application/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
     - images/insLogo.png
     - images/night.jpg
     - images/station.jpg
+    - images/dusk.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
