Toggle the random bg image

--- a/fu_application/pubspec.yaml
+++ b/fu_application/pubspec.yaml
@@ -51,12 +51,13 @@ flutter:
     - images/station.jpg
     - images/dusk.jpg
     - images/phone.png
-    - images/beach.jpg
+    - images/au.jpg
     - images/beauty.jpg
     - images/house.jpg
     - images/mountains.jpg
-    - images/rainfost.jpg
     - images/scenery.jpg
+    - images/rainfost.jpg
+    - images/farry.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
