setting Android launch

--- a/fu_application/android/app/build.gradle
+++ b/fu_application/android/app/build.gradle
@@ -31,6 +31,10 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+    
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 
     lintOptions {
         disable 'InvalidPackage'
